--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           </tr>
         </thead>
         <tbody id="tbody">
-          <tr>
+          <tr class="itemDelet">
             <td>Joao</td>
             <td>JoaoGamer</td>
-            <td><button>Delete</button></td>
+            <td><button id="btn-js">Delete</button></td>
           </tr>
         </tbody>
       </table>
