--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <tr class="itemDelet">
             <td>Joao</td>
             <td>JoaoGamer</td>
-            <td><button id="btn-js">Delete</button></td>
+            <td><button class="btn-js">Delete</button></td>
           </tr>
         </tbody>
       </table>
